Started addiug other API operation
- Update swagger spec with most desired operations
- Begun implementing JDBC operations including get single user and
  update user details
- Added support for an secret API token required for mutation endpoints
- Minimal validation and error handling
